--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,13 +1,13 @@
 {
   "default-registry": {
     "kind": "git",
-    "baseline": "bdf073a835ebea07e1d039cd9cff4f650014e4ce",
+    "baseline": "7f9f0e44db287e8e67c0e888141bfa200ab45121",
     "repository": "https://github.com/microsoft/vcpkg"
   },
   "registries": [
     {
       "kind": "artifact",
-      "location": "https://aka.ms/vcpkg-ce-default",
+      "location": "https://github.com/microsoft/vcpkg-ce-catalog/archive/refs/heads/main.zip",
       "name": "microsoft"
     }
   ]
